@@ -35,6 +35,7 @@
 <a href="CoreTasks/copyfile.html"><i>Copyfile</i></a><br>
 <a href="CoreTasks/cvs.html">Cvs</a><br>
 <a href="CoreTasks/changelog.html">CvsChangeLog</a><br>
+<a href="CoreTasks/cvsversion.html">CvsVersion</a><br>
 <a href="CoreTasks/cvspass.html">CVSPass</a><br>
 <a href="CoreTasks/cvstagdiff.html">CvsTagDiff</a><br>
 <a href="CoreTasks/defaultexcludes.html">Defaultexcludes</a><br>
