@@ -66,6 +66,7 @@ loadproperties=org.apache.tools.ant.taskdefs.LoadProperties
 basename=org.apache.tools.ant.taskdefs.Basename
 dirname=org.apache.tools.ant.taskdefs.Dirname
 cvschangelog=org.apache.tools.ant.taskdefs.cvslib.ChangeLogTask
+cvsversion=org.apache.tools.ant.tasksdefs.cvslib.CvsVersion
 buildnumber=org.apache.tools.ant.taskdefs.BuildNumber
 concat=org.apache.tools.ant.taskdefs.Concat
 cvstagdiff=org.apache.tools.ant.taskdefs.cvslib.CvsTagDiff
